--- a/Cupcake/src/main/resources/static/css/style.css
+++ b/Cupcake/src/main/resources/static/css/style.css
@@ -892,23 +892,6 @@ body::-webkit-scrollbar { /* All other browsers */
     color: var(--cart-button-background-hover-text) !important;
 }
 
-button.plus,
-button.minus {
-    width: 1.7rem;
-    height: 1.7rem;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.2s, transform 0.1s;
-}
-
-
-button.plus:hover,
-button.minus:hover {
-    background-color: #e0e0e0;
-    transform: scale(1.1);
-}
-
 /* ___________________________________________ */
 
 /* Login */
@@ -1604,9 +1587,11 @@ button.minus:hover {
     font-size: 0.938rem;
     margin: 0.4rem 0;
     padding: 0.25rem 0;
+    gap: 0;
 }
 
 .cart-popup ul li input {
+    margin: 0;
     width: 2rem;
     text-align: center;
     border: 0.063rem solid rgba(0,0,0,0.2);
@@ -1641,6 +1626,40 @@ button.minus:hover {
 
 .cart-popup ul li input[type=number] {
     -moz-appearance: textfield;
+}
+
+button.plus,
+button.minus {
+    background: none;
+    border: none;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: var(--card-text-color);
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.1s ease;
+}
+
+button.plus:active,
+button.minus:active {
+    transform: scale(0.9);
+}
+
+.cart-popup ul li .cart-controls {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem !important;
+}
+
+.cart-popup ul li .cart-controls input {
+    width: 2rem;
+    text-align: center;
 }
 
 /* ___________________________________________ */
