--- a/Cupcake/src/main/resources/templates/final-confirmation.html
+++ b/Cupcake/src/main/resources/templates/final-confirmation.html
@@ -19,7 +19,6 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="/css/guacamoleboy-framework.css">
@@ -37,8 +36,8 @@
     <div class="guac-container">
 
         <!-- Order Header -->
-        <h2>Order Confirmation #<span th:text="${data.order.id}">420</span></h2>
-        <p class="payment-p">Venligst kig om alt stemmer overens herunder</p>
+        <h2>Final Confirmation</h2>
+        <p class="payment-p">Sidste tilføjelser inden ordren oprettes</p>
         <!-- Order Header -->
 
         <hr class="section-divider">
@@ -46,7 +45,7 @@
         <!-- Delivery -->
         <h3>Leveringsmetode</h3>
         <div class="delivery-options guac-row">
-            <button type="button" th:text="${data.deliveryMethod}">Afhent i butik</button>
+            <button type="button" th:text="${data.deliveryMethod}"></button>
         </div>
         <p>Olskervej 1, 3770 Allinge</p>
         <p>Din ordre er klar inden for ca 30 min efter godkendelse</p>
@@ -56,6 +55,7 @@
         <hr class="section-divider">
 
         <!-- Coupon -->
+        <!-- TODO skriv det her om til én linje. Underligt at lave det i 2 lol. -->
         <h3>Rabatkode</h3>
         <p th:if="${data.coupon != null}" th:text="${data.coupon.code}">Ingen rabatkode anvendt</p>
         <p th:if="${data.coupon == null}">Ingen rabatkode anvendt</p>
@@ -78,7 +78,7 @@
         <!-- Order List -->
         <div class="order-list">
             <div class="order-item guac-row guac-col-auto" th:each="item : ${data.cartItems}">
-                <p th:text="${item.title} + ' / ' + ${item.description}">Produktnavn</p>
+                <p th:text="${item.title}">Produktnavn</p>
                 <p th:text="${item.quantity}">Antal</p>
                 <p th:text="${item.price} + ' kr'">Pris</p>
             </div>
@@ -102,7 +102,7 @@
         <!-- Payment Method -->
         <h3>Betalingsmetode</h3>
         <div class="payment-options guac-row">
-            <button type="button" th:text="${data.paymentMethod}">VISA</button>
+            <button type="button" th:text="${data.paymentMethod}"></button>
         </div>
         <!-- Payment Method -->
 
