tak-order pathing fix

--- a/Cupcake/src/main/resources/templates/tak-order.html
+++ b/Cupcake/src/main/resources/templates/tak-order.html
@@ -13,19 +13,20 @@
     <title>Olsker Cupcakes</title>
 
     <!-- Icon -->
-    <link rel="icon" href="../images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
-    <link rel="apple-touch-icon" href="../images/icons/cupcake-1.png">
+    <link rel="icon" href="images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
+    <link rel="apple-touch-icon" href="images/icons/cupcake-1.png">
 
     <!-- CSS Load -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Framwork load -->
-    <link rel="stylesheet" href="../css/guacamoleboy-wow.css">
-    <link rel="stylesheet" href="../css/guacamoleboy-framework.css">
-    <script src="../js/guacamoleboy-wow.js" defer></script>
+    <link rel="stylesheet" href="css/guacamoleboy-wow.css">
+    <link rel="stylesheet" href="css/guacamoleboy-framework.css">
+    <script src="js/guacamoleboy-wow.js" defer></script>
 
     <!-- Modules -->
-    <script type="module" src="../js/components/navbar.js" defer></script>
+    <script type="module" src="js/components/navbar.js" defer></script>
+    <script src="js/notification.js" defer></script>
 
 </head>
 <body class="subpage visuals-tak">
@@ -33,6 +34,10 @@
 <!-- Navbar -->
 <div id="navbar-component"></div>
 <!-- Navbar -->
+
+<!-- Notification Container -->
+<div id="guac-notification-container"></div>
+<!-- Notification Container -->
 
 <!-- Tak Start -->
 <section class="section-tak">
