tak-order frontend backend
ye

--- a/Cupcake/src/main/resources/templates/payment.html
+++ b/Cupcake/src/main/resources/templates/payment.html
@@ -92,6 +92,7 @@
                 <button type="button" data-id="4">Bring</button>
                 <button type="button" data-id="5">Afhent i butik</button>
             </div>
+            <input type="text" id="deliveryAddress" placeholder="Leveringsadresse" class="delivery-address-input">
             <!-- Delivery -->
 
             <hr class="section-divider">
