--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
         <div class="guac-row">
 
             <div class="guac-col-auto index-cupcake-1 guac-animate guac-slide-left">
-                <img src="images/page-content/index/2men.png" alt="Billede 1">
+                <!--<img src="images/page-content/index/2men.png" alt="Billede 1"> -->
             </div>
 
         </div>
