Fixed order-tak.html med rigtige data!

--- a/Cupcake/src/main/resources/templates/final-confirmation.html
+++ b/Cupcake/src/main/resources/templates/final-confirmation.html
@@ -109,7 +109,7 @@
         <hr class="section-divider">
 
         <!-- Next Button -->
-        <a th:href="'/pay/' + ${data.order.id} + '?confirm=true'" class="next-btn">Betal nu</a>
+        <a th:href="'/ordertak/' + ${data.order.id}" class="next-btn">Betal nu</a>
         <!-- Next Button -->
 
     </div>
